# Univer

./: .gitignore  Coords.cpp  Transponirovat.cpp  eleven.cpp  firsttask.cpp  seventh.cpp  sixteen.cpp  thirteen.cpp
01.10/: main  main.cpp
2024.09.19/10:30/: fourteen.cpp
2024.09.25/10:30/: advance(iter,2).cpp  deque.cpp  forward_list  list  list,iter, two begins  temp
2024.09.30/13:50/: multimap.cpp
2024.10.02/: main.cpp
2024.10.02/13:50/: discrete.cpp  main.cpp
2024.10.03/09:00/: main
2024.10.07/10:30/: main  main.cpp  task1.cpp
2024.10.08/Project/: Project.geany  a.out  time  time.cpp  time.h  time.h.gch
2024.10.10/13:50/: Matrix.geany  matrix.h  matrix.hpp
2024.10.15/9:00/: Matrix.geany  main  main.cpp
2024.10.17/9:00/: Matrix.geany  main  main.cpp  matrix.h  matrix.hpp
2024.10.21/C++_Executable/: main.cpp
2024.10.24/C++_Executable/: main.cpp
2024.10.25/ClassLegacy/: main.cpp
2024.10.28/ClassLegacy/: main.cpp
2024.10.29/MaybeTask/: CMakeLists.txt
2024.10.29/Polymorphism/: CMakeLists.txt
2024.11.04/Exceptions/: CMakeLists.txt
2024.11.04/Logger/: main.cpp
2024.12.07/: MaybeConnected.txt  a.out  input.txt
2024.12.07/Another/: input.txt
2024.12.09/: CMakeLists.txt  calculation.cpp  calculation.h  main.cpp
2024.12.10/: calc.h  main.cpp
2024.12.20/: CMakeLists.txt
2024.12.23/: CMakeLists.txt  main.cpp  main2.cpp  main3.cpp  main4.cpp  readnotme.md
25.09/10:30/: advance(iter,2).cpp  array  list.erase
25.09/12:20/: abstract_containers  invalidisation.cpp  map  map.cpp  output.txt  temp  temp.cpp  unordered_map  unordered_map.cpp
26.09/10:30/: unordered_map
30.09/13:50/: main  multitude
3sem/2024.12.07/: CMakeLists.txt  main.cpp  output.txt  output2.txt
3sem/2024.12.09/: a.out  calculation.cpp  main.cpp
3sem/2024.12.10/: calc.cpp  (+2 more)
4sem/2025.03.05/PlagitCode/: CMakeLists.txt  JSONNode.cpp  Tokenizer.h
4sem/2025_04_05/: CMakeLists.txt  student.h
4sem/plagiatcode/: CMakeLists.txt  JSONNode.cpp  JSONNode.h  JSONParser.cpp  JSONParser.h  Tokenizer.cpp  Tokenizer.h  example_2.json  fdcsf  main.cpp  plagiatcode  text.json
SPECIALFORCMAKE21102024/: a.out  ctime.cpp
TryToUnderstand/: eight.cpp  fiveteen.cpp  second.cpp
(+192 files in other folders)
