cmake_minimum_required(VERSION 3.20)
project(JsonParse)
option(BUILD_SHARED_LIBS "Build using shared libraries " ON)
add_library(JSONNode JSONNode.cpp)
add_library(Tokenizer Tokenizer.cpp)
add_library(JSONParser JSONParser.cpp)
target_include_directories(JSONNode PUBLIC ${MAKE_SOURCE_DIR})
add_executable(JsonParse main.cpp)
target_link_libraries(JsonParse PRIVATE JSONNode Tokenizer JSONParser)
